feat(category): get a category by id
- user can get a category by the category_id

[Delivers: #170111173]
